<resources>
    <string name="app_name">پیامک تقلبی</string>
    <string name="enterPhoneOrName">نام یا شماره را وارد کنید</string>
    <string name="timeSend">زمان :</string>
    <string name="dateSend">تاریخ :</string>
    <string name="time">time</string>
    <string name="date">Date</string>
    <string name="action_send">نوع ارسال</string>
    <string name="schedule">زمانبندی ارسال</string>
    <string name="gmail">JavidDeveloper@Gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sendEmail">ارسال ایمیل</string>
    <string name="NazarMyket">myket://comment?id=com.sattar.j.smsfake</string>
    <string name="MyPage">https://myket.ir/developer/dev-32375/apps</string>
    <string name="EmailSubject">ایمیل ارسالی از برنامه پیامک تقلبی</string>
    <string name="cancelDialog">لغو</string>
    <string name="messageEmailSend">کاربر گرامی شما میتوانید با پیشنهادات و انتقادات خود مار را یاری نمایید</string>
    <string name="rateTitle">ثبت نظر</string>
    <string name="rateMsg">حمایت شما با 5 ستاره</string>
    <string name="inMykey">نظر در مایکت</string>
    <string name="appsTitle">سایر محصولات</string>
    <string name="appsMsg">از سایر برنامه های ما در مایکت دیدن کنید</string>
    <string name="appsShow">تایید</string>
    <string name="danger_message">کاربر گرامی پیامک های ساخته شده توسط این برنامه برای کسی ارسال نمیشود و فقط در صندوق پیامهای شما نمایش داده میشود.</string>
    <string name="receive">دریافت میکنم</string>
    <string name="send">ارسال میکنم</string>
    <string name="messageText">متن پیام</string>
    <string name="update_myket">بروزرسانی در مایکت</string>
    <string name="exit_app">خروج</string>
    <string name="cancel">لغو</string>
    <string name="update_version">بروزرسانی نسخه</string>
    <string name="success_message_send_sms">برای مشاهده نتیجه وارد پیام‌های خود شوید</string>
    <string name="action_success">عملیات موفق</string>
    <string name="time_send">ساعت ارسال پیام</string>
    <string name="date_send">تاریخ ارسال پیام</string>
    <string name="accept">تایید</string>
    <string name="access_denaed_permission_message">دسترسی لغو شد لطفا مجددا سعی نمایید.</string>
    <string name="err_enter_destination">نام یا شماره تلفن را وارد نمایید</string>
    <string name="err_text_message">متن پیام را وارد کنید</string>
    <string name="message_help_enter_date">برای ورود تاریخ و ساعت روی هر آیتم دو بار کلیک کنید</string>
</resources>
