<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:layoutDirection="rtl">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.sattar.j.smsfake.tools.customViews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    app:styleFont="medium" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/card_send"
            android:layout_below="@+id/appbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_danger_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:orientation="horizontal">

                        <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="15sp"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.3"
                            android:text="@string/danger_message"
                            android:textColor="@color/textColor"
                            app:styleFont="light" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_action"
                    android:layout_below="@+id/card_danger_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22sp"
                            android:layout_marginEnd="20sp">

                            <ImageView
                                android:id="@+id/img_send_action"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                app:srcCompat="@drawable/ic_send"
                                app:tint="@color/titleCatColor" />

                            <com.sattar.j.smsfake.tools.customViews.CustomTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12sp"
                                android:layout_toStartOf="@id/img_send_action"
                                android:text="@string/action_send"
                                android:textColor="@color/titleCatColor"
                                app:styleFont="light" />

                        </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginStart="22sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="22sp"
                        android:background="@color/lineColor" />

                    <!-- <com.jaredrummler.materialspinner.MaterialSpinner-->
                    <!--     android:id="@+id/spinner"-->
                    <!--     android:layout_width="match_parent"-->
                    <!--     android:layout_height="wrap_content"-->
                    <!--     android:layout_marginLeft="20sp"-->
                    <!--     android:layout_marginTop="12sp"-->
                    <!--     android:layout_marginRight="20sp"-->
                    <!--     android:elevation="5dp"-->
                    <!--     app:ms_arrow_tint="@color/colorPrimary"-->
                    <!--     app:ms_background_color="#f1f1f1"-->
                    <!--     app:ms_hint="نوع ارسال"/>-->

                    <RadioGroup
                        android:id="@+id/radioGroup_verify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.sattar.j.smsfake.tools.customViews.CustomRadioButton
                            android:id="@+id/radio_verifyEmail"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                            android:gravity="right|center_vertical"
                            android:layoutDirection="rtl"
                            android:textColor="@color/textColor"
                            android:text="@string/receive"
                            app:buttonCompat="@null" />

                        <com.sattar.j.smsfake.tools.customViews.CustomRadioButton
                            android:id="@+id/radio_verifySms"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                            android:gravity="right|center_vertical"
                            android:layoutDirection="rtl"
                            android:text="@string/send"
                            android:textColor="@color/textColor"
                            app:buttonCompat="@null" />

                    </RadioGroup>

                        <com.sattar.j.smsfake.view.navigations.sendMessage.destination.CustomDestinationList
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:id="@+id/destList" />
                        <!--                    <com.google.android.material.textfield.TextInputLayout-->
                        <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:layout_margin="16dp">-->
                        <!--                    <com.sattar.j.smsfake.tools.customViews.CustomAutoCompleteTextView-->
                        <!--                        android:id="@+id/auto_destination"-->
                        <!--                        android:layout_height="match_parent"-->
                        <!--                        android:layout_margin="16dp"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:drawableStart="@drawable/ic_menu_down"-->
                        <!--                        android:hint="@string/phoneOrName"-->
                        <!--                        android:inputType="text"-->
                        <!--                        android:layoutDirection="rtl"-->
                        <!--                        android:textSize="12sp"-->
                        <!--                        app:styleFont="light" />-->
                        <!--                    <androidx.appcompat.widget.AppCompatSpinner-->
                        <!--                        android:id="@+id/spinner_destinations"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:layout_marginStart="16dp"-->
                        <!--                        android:layout_marginTop="16dp"-->
                        <!--                        android:layout_marginEnd="16dp"-->
                        <!--                        android:textAlignment="textEnd"-->
                        <!--                        android:textDirection="rtl" />-->

                        <!--                    </com.google.android.material.textfield.TextInputLayout>-->
                        <!--                    <com.google.android.material.textfield.TextInputLayout-->
                        <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:layout_margin="16dp">-->

                        <!--                        <com.sattar.j.smsfake.tools.customViews.CustomEditText-->
                        <!--                            android:id="@+id/phone"-->
                        <!--                            android:textColor="@color/textColor"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:hint="@string/phoneOrName"-->
                        <!--                            android:nextFocusDown="@id/message"-->
                        <!--                            android:drawableLeft="@drawable/ic_close"-->
                        <!--                            android:maxLines="1"-->
                        <!--                            app:styleFont="light"/>-->
                        <!--                    </com.google.android.material.textfield.TextInputLayout>-->

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_action"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/img_schedule"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                app:srcCompat="@drawable/ic_calendar_clock"
                                app:tint="@color/titleCatColor" />

                            <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12sp"
                            android:layout_toStartOf="@id/img_schedule"
                            android:text="@string/schedule"
                            android:textColor="@color/titleCatColor"
                            app:styleFont="light" />

                    </RelativeLayout>

                    <View
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lineColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35sp"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:id="@+id/timeTxt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="@color/timeColor"
                            android:textSize="19dp"
                            app:styleFont="light" />

                        <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:textColor="@color/textColor"
                            android:text="@string/timeSend"
                            app:styleFont="light" />


                        <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:id="@+id/dateTxt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/date"
                            android:textColor="@color/timeColor"
                            android:textSize="19dp"
                            app:styleFont="light" />

                        <com.sattar.j.smsfake.tools.customViews.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"

                            android:textColor="@color/textColor"
                            android:text="@string/dateSend"
                            app:styleFont="light" />
                    </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spaceBottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/fab_send"
            android:clipToPadding="true"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.sattar.j.smsfake.tools.customViews.CustomEditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:background="@null"
                    android:textColor="@color/textColor"
                    android:padding="5dp"
                    android:hint="@string/messageText"
                    app:styleFont="light" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spaceBottom"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:backgroundTint="@color/colorAccent"
            app:backgroundTintMode="src_in"
            app:fabSize="mini"
            app:useCompatPadding="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/ic_send"
            app:tint="@color/white"
            tools:ignore="RelativeOverlap" />

        <Space
            android:id="@+id/spaceBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</layout>